--- a/heartbeat-coroutines-debug/src/main/resources/plugin.yml
+++ b/heartbeat-coroutines-debug/src/main/resources/plugin.yml
@@ -5,4 +5,5 @@ api-version: 1.17
 libraries:
   - org.jetbrains.kotlin:kotlin-stdlib:1.5.21
   - org.jetbrains.kotlin:kotlin-reflect:1.5.21
-  - io.github.monun:sample:${version}
+  - org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0
+  - io.github.monun:heartbeat-coroutines:${version}
