--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,10 +2,10 @@
 kotlin = "1.8.22"
 dokka = "1.8.20"
 coroutines = "1.7.2"
-paper = "1.18"
+paper = "1.18-R0.1-SNAPSHOT"
 
 [libraries]
-paper = "io.papermc.paper:paper-api:1.18-R0.1-SNAPSHOT"
+paper = {module = "io.papermc.paper:paper-api", version.ref="paper"}
 coroutines = {module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref="coroutines"}
 
 [plugins]
